# workhorse

./: .dockerignore  .fallowrc.json  .gitignore  .npmrc  .oxfmtrc.json  .oxlintignore  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY.md  CONTEXT.md  Dockerfile  MIGRATION.md  PLAN.md  README.md  ROADMAP.md  TODOS.md  _DUMMY_PR_TEST_.md  architecture.d2  build.ts  bunfig.toml  changelog.config.ts  live-trace.ts  manifest  package.json  trace-watch.sh  tsconfig.base.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
.__archive/: rust-ci.yml
.__archive/core-v2/: package.json  plopfile.ts  vitest.config.ts
.__archive/docs/: old-architecture.d2
.__archive/plans/: 005-low-priority-cleanups.md  README.md
.__archive/rust/pipeline/: Cargo.toml
.__archive/rust/pipeline/src/: compiler.rs  op.rs
.__archive/rust/pipeline/src/expr/: parse.rs
.__archive/rust/sandbox/: Cargo.toml
.__archive/rust/sandbox/src/: lib.rs
.__archive/rust/sandbox/tests/: sandbox_test.rs
.__archive/rust/wh-demo/: Cargo.toml
.__archive/rust/wh-demo/src/: demo_counter.rs  harness_panel.rs  main.rs  widgets.rs
.changeset/: README.md  config.json  rename-to-workhorse.md  runtime-agnostic-keychain.md
.github/workflows/: ci.yml  release.yml  rust-ci.yml
.opencode/: tui.json
.opencode/commands/: opsx-continue.md  opsx-onboard.md  opsx-verify.md
.playwright-mcp/: page-2026-07-21T22-43-56-622Z.yml  page-2026-07-21T22-44-12-665Z.yml  page-2026-07-21T22-45-14-164Z.yml  page-2026-07-21T22-49-08-988Z.yml  page-2026-07-21T22-49-31-283Z.yml  page-2026-07-21T22-49-44-507Z.yml  page-2026-07-22T04-00-21-777Z.yml  page-2026-07-22T04-00-39-812Z.yml  page-2026-07-22T04-00-51-591Z.yml  page-2026-07-22T04-01-08-720Z.yml  page-2026-07-23T03-31-21-139Z.yml  page-2026-07-23T05-17-58-961Z.yml  page-2026-07-23T05-18-11-767Z.yml
.workhorse/plugins/: hello-plugin.ts
bundles/: install-plugins.mjs  plugins.json
bundles/agents/: coder.md  shooter.md  verifier.md
bundles/extensions/: browser.ts  catbox.ts  imgup.ts
core-v3/: package.json
docs/: API-REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  INDEX.md  PACKAGES.md  PLUGIN-DEVELOPMENT.md  PLUGIN-GUIDE.md  QUICK-START.md  STEERING-GUIDE.md  TROUBLESHOOTING.md  old-architecture.d2
docs/plans/: unified-activity-renderer-architecture.md
evals/: .state.json  agent-vs-workflow.eval.ts  corpus.json  package.json  run.mjs  search-providers.eval.ts  tsconfig.json  workflow-validator.eval.ts
evals/fixtures/: search-queries.ts
extension/: workhorse.ts
oxlint/eslint-plugin-jiratown/: index.js  index.ts  package.json  tsconfig.json
oxlint/eslint-plugin-workhorse/: README.md  index.js  index.ts  package.json
plan/: 00-prerequisites.md  01-config.md  02-types.md  03-hooks.md  04-plugins.md  05-database.md  06-memory-service.md  07-monitor-service.md  08-issue-provider.md  08-tracker.md  09-agent-adapter.md  09-harness.md  10-mcp-server.md  10-mcp.md  11-jira-plugin.md  12-github-plugin.md  13-idle-steering.md  14-cli.md  14-tui.md  15-cli.md  15-tui.md  16-consolidate-spawn-logic.md  17-steering-rule-class.md  18-plugin-skills.md  19-slack-plugin.md  20-server.md  21-multi-agent-orchestrator.md  22-pi-adapter-v2-bashless.md  23-phase-gated-tools.md  PROGRESS.md  README.md  learnings.md  rearchitecture.md  workhorse-on-pi.md
plan/archive/: 01-config.md  02-types.md  07-monitor-service.md  12-github-plugin.md
plan/rearchitecture/: README.md  SESSION-LOG.md  config-schema.md  demo.md  genai-model.md  high-level-ideas.md  learnings.md  orchestrator.md  rearchitecture.md  registry-services.md  rust-port.md  scripts.md  step-assembly.md
plans/: 001-wire-core-v2-into-ci.md  002-harden-script-service.md  003-unify-tool-error-contract.md  004-config-loader-tests-and-errors.md  README.md
plugins/aft/: package.json  plugin.ts  tools.ts
plugins/browser/: extension.ts  package.json  plugin.ts  tools.ts  tsconfig.json
plugins/eslint-plugin-jiratown/: index.js  index.ts  package.json  tsconfig.json
plugins/github/: api.ts  extension.ts  package.json  plugin.ts  tools.ts  tsconfig.json
plugins/imgup/: package.json  plugin.ts  tools.ts  tsconfig.json
plugins/jira/: package.json  plugin.ts
plugins/knowledge/: extension.ts  package.json  plugin.ts  tools.ts
plugins/ntfy/: package.json  plugin.ts
plugins/paste/: extension.ts  package.json  (+2 more)
rust/: Cargo.toml
rust/pipeline/: Cargo.toml
rust/pipeline/src/: compiler.rs  expr.rs  lib.rs
rust/pipeline/src/expr/: parse.rs
rust/pipeline/tests/: compiler_test.rs
rust/runtime/: Cargo.toml
rust/runtime/src/: anthropic_direct.rs  genai_model.rs  harness.rs  lib.rs  oauth.rs  orchestrator.rs  persist.rs  step.rs  subagent.rs  workflow.rs
rust/runtime/tests/: harness_test.rs  seam_test.rs  workflow_test.rs
rust/sandbox/src/: local.rs  sandbox.rs  wasi.rs
rust/services/: Cargo.toml
rust/services/src/: lib.rs  registry.rs  service.rs
rust/services/src/script/: discover.rs  invoke.rs  mod.rs  run.rs  service.rs
rust/tools/: Cargo.toml
rust/tools/src/: bridge.rs  define.rs  lib.rs  tool.rs
rust/wasm-probe/: Cargo.toml
rust/wasm-probe/src/: main.rs
rust/wh/: Cargo.toml
rust/wh-demo/: Cargo.toml  README.md
rust/wh-demo/.workhorse/scripts/: greet.sh
rust/wh-demo/src/: builder_panel.rs  compiler_panel.rs  harness_panel.rs  main.rs  orchestrator_panel.rs  presets.rs  registry_panel.rs  selfcheck.rs  when_panel.rs  workflow_panel.rs
rust/wh-demo/tests/: ui_icon_lint.rs
sandbox/: Dockerfile  agent-browser.sh  install.mjs  magic-context.jsonc  pi.json  runner.mjs
scripts/: build-plugins.ts  build-tui-utils.ts  build-tui.ts  check-coverage.ts  diagnose-start.ts  seed.ts  test-agent-sdk.ts  test-opencode-integration.ts  test-spawn.ts
src/: agent-run.ts  browser.ts  chat.ts  events.ts  index.ts  knowledge.ts  mcp-cli.ts  mcp-server.sh  model-chains.ts  test-effect-async.test.ts  ticket-workflow.ts  tickets.ts  types.ts
ui/: nuxt.config.ts  package.json  wrangler.jsonc
worker/: package.json  tsconfig.json  wrangler.jsonc
(+1166 files in other folders)
