[package]
name = "runtime"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
pipeline = { path = "../pipeline" }

# Native-only: the Harness drives rig's AgentRun over tokio. The sans-IO
# `WorkflowRun` governor needs none of this, so it stays buildable for wasm
# (the demo site) when `native` is disabled.
rig = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }     # StreamExt for streaming model responses
reqwest = { version = "0.13", optional = true }   # HTTP backend (transitive via rig); named in AnthropicCompletionModel<reqwest::Client>
schemars = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
# OAuth deps (native-only): PKCE crypto, browser launch, random state
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
open = { version = "5", optional = true }
dirs = { version = "6", optional = true }
url = { version = "2", optional = true }
# genai: native-protocol multi-provider client (25+ providers)
genai = { version = "0.7.0-beta.5", optional = true }

[features]
default = ["native"]
native = ["dep:rig", "dep:futures", "dep:reqwest", "dep:schemars", "dep:async-trait", "dep:tokio", "dep:tokio-util", "dep:sha2", "dep:base64", "dep:rand", "dep:open", "dep:dirs", "dep:url", "dep:genai"]

[dev-dependencies]
tempfile.workspace = true
tools = { path = "../tools" }

[lints]
workspace = true
