[package]
name = "tools"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rig.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
