[package]
name = "wh"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
pipeline = { path = "../pipeline" }
runtime = { path = "../runtime" }
serde.workspace = true
toml = "0.8"
thiserror.workspace = true
dirs = "6"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
