[package]
name = "pipeline"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio.workspace = true
toml = "0.8"

[lints]
workspace = true
