[package]
name = "sandbox"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true

[lints]
workspace = true
