[package]
name = "wh-demo"
edition = "2024"
version = "0.1.0"
license = "MIT"
description = "Native egui smoke-test surface for the workhorse Rust port (when-expr, config→pipeline compiler, WorkflowRun governor)."

[[bin]]
name = "wh-demo"
path = "src/main.rs"

[dependencies]
# Wire the real crates — no mocks of the logic under test.
pipeline = { path = "../pipeline" }
runtime = { path = "../runtime" }              # default features (native) → full WorkflowRun
tools = { path = "../tools" }
services = { path = "../services" }            # real services (ScriptService, Registry)
wh = { path = "../wh" }                          # facade: .workhorse config discovery + cascade
sandbox = { path = "../sandbox" }              # LocalSandbox for dev script execution
rig = "0.39"                                   # CompletionModel trait for the Harness panel/selfcheck
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pollster = "0.3"                                # block_on for the async ValueOp pipeline demo (mock path)
tokio = { version = "1", features = ["rt-multi-thread"] }  # real-model calls need a reactor
tokio-util = "0.7"                                        # CancellationToken for the Cancel button
async-trait = "0.1"
eframe = "0.34"
egui = "0.34"
egui-phosphor = "0.12"                          # Phosphor icon font for egui (matches egui 0.34)

[lints.clippy]
# Match the core workspace: pedantic enforced (CI gates with `-D warnings`).
pedantic = { level = "warn", priority = -1 }

[lints.rust]
# Mirror the core workspace: this crate is 100% safe Rust.
unsafe_code = "forbid"
